# ExampleQt

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json  version.h.in
.github/workflows/: cmake-multi-platform.yml
app/: Application.rc  MainDlg.cpp  MainDlg.h  main.cpp
app/localization/: English.cpp  German.cpp  LanguageManager.cpp  Languages.h  StringIDs.cpp  StringIDs.h
inc/: LayerCake.h
lib/: LayerCake.cpp
res/: resource.qrc
